--- a/YACHT/index.html
+++ b/YACHT/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <p class ="title">YACHT DICE!</p>
     <div>
         <button class="roll">Roll Dice</button>
     </div>
-    <p class ="keep"></p>
+    <p class ="keep">choose what to keep</p>
     <p class="lastkeep"></p>
     <button class="btn1 dice">*</button>
     <button class="btn2 dice">*</button>
