--- a/YACHT/index.html
+++ b/YACHT/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <p class ="title">YACHT DICE!</p>
-    <div>
-        <button class="roll">Roll Dice</button>
-    </div>
-    <p class ="keep">choose what to keep</p>
+    <div class="container">
+    <button class="roll">Roll Dice</button>
+    <p class="keep"></p>
     <p class="lastkeep"></p>
     <button class="btn1 dice">*</button>
     <button class="btn2 dice">*</button>
@@ -24,7 +23,7 @@
     <button class="btn5 dice">*</button>
     <br>
     <br>
-    <div>
+    
         <table class= "table" border="1">
             <th class="ones"><button class="ones btn">ones</button></th>
             <th class="fourofakind"><button class="fourofakind btn">Four of a Kind</button></th>
